Update import xml for meida(no done).